--- a/css/base/_fonts.css
+++ b/css/base/_fonts.css
@@ -1,1 +1,7 @@
 /* This file contains all @font-face declarations, if any. */
+/*@font-face {*/
+/*    font-family: 'Poiret';*/
+/*    src: url('../fonts/PoiretOne-Regular.ttf') format('ttf');*/
+/*    font-weight: normal;*/
+/*    font-style: normal;*/
+/*}*/
