--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,18 @@
 @charset 'UTF-8';
 
 /* 1. Vendors */
-@import 'vendor/*.css';
+@import 'vendor/_normalize.css';
 
 /* 2. Configuration and helpers */
-@import 'utils/*.css';
+/*@import 'utils/*.css';*/
 
 /* 3. Base stuff */
-@import 'base/*.css';
+@import 'base/_base.css';
+@import 'base/_bootstrap.css';
+
 
 /* 4. Layout-related sections */
-@import 'layout/*.css';
+/*@import 'layout/*.css';*/
 
 /* 5. Components */
-@import 'components/*.css';
+@import 'components/_home.css';
