start removing applicant

--- a/css/components/_home.css
+++ b/css/components/_home.css
@@ -20,18 +20,9 @@
 	transform: rotate(360deg);
 }
 
-.home__label {
+.applicant-selector {
 	display: block;
 	width: 100%;
-	margin: 1em 0;
-}
-
-.home__input {
-	margin-left: 0.5em;
-	border-radius: 2px;
-	border-width: 1px;
-	border-color: grey;
-	padding: 0.3em;
 }
 
 .search-container {
